@@ -1,4 +1,9 @@
-ACLOCAL_AMFLAGS = 
-
 SUBDIRS = templates medias locale
-dist_workflow_PYTHON = __init__.py models.py urls.py views.py
+dist_workflow_PYTHON =	\
+	admin.py	\
+	forms.py	\
+	__init__.py	\
+	models.py	\
+	teammodels.py	\
+	urls.py		\
+	views.py
