@@ -9,7 +9,7 @@ Standards-Version: 3.8.4
 
 Package: webengine-workflow
 Architecture: all
-Depends: ${misc:Depends}, ${python:Depends}, webengine
+Depends: ${misc:Depends}, ${python:Depends}, webengine (>= 0.12.0), webengine-team
 XB-Python-Version: ${python:Versions}
 Recommends: 
 Description: Plugin workflow for WebEngine
