@@ -5,7 +5,6 @@ include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/autotools.mk
 
 DEB_CONFIGURE_EXTRA_FLAGS := 
-
 PYTHON_PACKAGES := webengine-workflow
 
 $(patsubst %,binary-install/%,$(PYTHON_PACKAGES)) ::
