@@ -1,1 +1,6 @@
-dist_mediasimg_DATA = 
+dist_mediasimg_DATA =	\
+	validation_KO_disabled.png	\
+	validation_KO.png		\
+	validation_OK_disabled.png	\
+	validation_OK.png		\
+	untake.png
