@@ -1,2 +1,9 @@
 SUBDIRS =
-dist_templates_DATA = index.html
+dist_templates_DATA =	\
+	base.html			\
+	index.html			\
+	item_new.html			\
+	workflowinstanceitem_show.html	\
+	workflowinstance_list.html	\
+	workflowinstance_new.html	\
+	workflowinstance_show.html
