@@ -10,5 +10,5 @@
 
 {% block title %}{% trans "Workflow" %}{% endblock %}
 
-    {% block fullpage %}
-    {% endblock fullpage %}
+    {% block content %}
+    {% endblock content %}
