@@ -1,6 +1,6 @@
 {% extends "workflow/base.html" %}
 
-{% block fullpage %}
+{% block content %}
 <div class="fullpage">
 
     <div class="idcard idtitle">Workflow management</div>
@@ -11,4 +11,4 @@
     </ul>
 
 </div>
-{% endblock fullpage %}
+{% endblock content %}
