@@ -1,6 +1,6 @@
 {% extends "workflow/base.html" %}
 
-{% block fullpage %}
+{% block content %}
 <div class="fullpage">
 
     <div class="idcard idtitle">Workflow creation</div>
@@ -29,4 +29,4 @@
 
 
 </div>
-{% endblock fullpage %}
+{% endblock content %}
