@@ -1,6 +1,6 @@
 {% extends "workflow/base.html" %}
 
-{% block fullpage %}
+{% block content %}
 <div class="fullpage">
 
     <div class="idcard idtitle">Workflows for "{{ workflowinstance }}" </div>
@@ -36,4 +36,4 @@
     </table>
 
 </div>
-{% endblock fullpage %}
+{% endblock content %}
