@@ -1,6 +1,6 @@
 {% extends "workflow/base.html" %}
 
-{% block fullpage %}
+{% block content %}
 <div class="fullpage">
 
     <div class="idcard idtitle">{{ workflowinstanceitem }} </div>
@@ -20,4 +20,4 @@
     </table>
 
 </div>
-{% endblock fullpage %}
+{% endblock content %}
